@@ -414,11 +414,11 @@ class Query implements QueryInterface {
    * {@inheritdoc}
    */
   public function sort($field, $order = self::SORT_ASC) {
-    $order = strtoupper(trim($order)) == self::SORT_DESC ? self::SORT_DESC : self::SORT_ASC;
-    if (isset($this->sorts[$field])) {
-      unset($this->sorts[$field]);
+    $order = strtoupper(trim($order));
+    $order = $order == self::SORT_DESC ? self::SORT_DESC : self::SORT_ASC;
+    if (!isset($this->sorts[$field])) {
+      $this->sorts[$field] = $order;
     }
-    $this->sorts[$field] = $order;
     return $this;
   }
 
